--- a/todo
+++ b/todo
@@ -1,1 +1,11 @@
-circle ci
+pwa next
+ipfs analytics
+dat cdn - beaker browser
+
+
+https://leo.im/
+rauchg.com
+read https://github.com/zeit/next.js
+
+rad laoyyouts and examples
+see arrticles on design system an rebass
