--- a/todo
+++ b/todo
@@ -9,3 +9,6 @@ read https://github.com/zeit/next.js
 
 rad laoyyouts and examples
 see arrticles on design system an rebass
+see svg animations and jared palmer animations svg
+see favicon leo
+mdx for blog
