--- a/todo
+++ b/todo
@@ -12,3 +12,5 @@ see arrticles on design system an rebass
 see svg animations and jared palmer animations svg
 see favicon leo
 mdx for blog
+see redirects
+gpg key (see aral and how to put it on twitter)
