--- a/todo
+++ b/todo
@@ -14,3 +14,19 @@ see favicon leo
 mdx for blog
 see redirects
 gpg key (see aral and how to put it on twitter)
+custom server
+zpao.com
+
+https://github.com/jstejada/react-typist
+https://github.com/amio/badgen-service see now.json
+uptimerobot.com
+check rebass and see if I can remove reset css
+
+design an icon like leo.im
+http://mrmrs.cc/writing
+https://colorable.jxnblk.com/39244e/c9deb4
+http://jxnblk.com/hello-color/?c=cee46d
+https://monochrome.jxnblk.com/1f39ff
+http://jxnblk.com/grays/
+http://mrmrs.cc/contrast/
+https://cssstats.com/
