--- a/todo
+++ b/todo
@@ -30,3 +30,7 @@ https://monochrome.jxnblk.com/1f39ff
 http://jxnblk.com/grays/
 http://mrmrs.cc/contrast/
 https://cssstats.com/
+Hakim.se
+Animazioni come next 6
+Search rem in grid styles
+redirect trailing slash
