--- a/todo
+++ b/todo
@@ -34,3 +34,10 @@ Hakim.se
 Animazioni come next 6
 Search rem in grid styles
 redirect trailing slash
+rss
+badgen con dependencies up to date
+see color theory tachions and atlassian design system
+get inspired by https://zeit.co/blog/next6 for post layout
+https://ui.reach.tech/visually-hidden
+svg icons see jrbnx
+title
