--- a/todo
+++ b/todo
@@ -41,3 +41,4 @@ get inspired by https://zeit.co/blog/next6 for post layout
 https://ui.reach.tech/visually-hidden
 svg icons see jrbnx
 title
+canvas bg particles (search codepen)
