--- a/todo
+++ b/todo
@@ -41,4 +41,6 @@ get inspired by https://zeit.co/blog/next6 for post layout
 https://ui.reach.tech/visually-hidden
 svg icons see jrbnx
 title
-canvas bg particles (search codepen)
+canvas bg particles (search codepen) https://github.com/lukeed/pwa
+https://github.com/lukeed/dset
+404
