--- a/posts/2015/introducing-morpheus.mdx
+++ b/posts/2015/introducing-morpheus.mdx
@@ -1,5 +1,5 @@
 ---
-**UPDATE: See the features section for last added functionalities.**
+** UPDATE: See the features section for last added functionalities. **
 ___
 
 The world have plenty of CMS, blogging platform and web publishing platform, so why another one?
@@ -26,15 +26,15 @@ Let's try, and this website will still work.
 
 ### Features
 
-- [x] Post and pages displaying, markdown render, posts pagination.
-- [x] Server side rendering.
-- [x] Comments managed with [Disqus](https://disqus.com/).
-- [x] Configurable permalinks.
-- [x] Fully working default theme (it's called **blablabla**)
+- Post and pages displaying, markdown render, posts pagination.
+- Server side rendering.
+- Comments managed with [Disqus](https://disqus.com/).
+- Configurable permalinks.
+- Fully working default theme (it's called **blablabla**)
 
 **Updates:**
 
-- [x] RSS support.
+- RSS support.
 
 
 
