--- a/posts/2015/morpheus-is-moving-forward.mdx
+++ b/posts/2015/morpheus-is-moving-forward.mdx
@@ -15,7 +15,7 @@ Morpheus has been featured on:
 
 In these last few days I concentrated on solving some [issues](https://github.com/vesparny/morpheus/issues?q=is%3Aissue+is%3Aclosed) and developing new features.
 
-## RSS
+### RSS
 
 Morpheus has now RSS support for blog entries, everything works out of the box. Add this [website](https://alessandro.arnodo.net/rss/) to your feed reader for a try.
 
@@ -27,24 +27,24 @@ This means that any of your posts shared on Social Network will now have rich co
 ![Open graph](/images/2015/01/screenshot.png)
 
 
-## Google Analytics
+### Google Analytics
 
 A custom google analytics component has been added, you can track page visits now, just adding your tracking code in the configuration file.
 
-## Next steps
+### Next steps
 ___
 
-### Split the monolith
+#### Split the monolith
 
 The much more important thing is to rethink Morpheus architecture.
 The application has now a monolithic structure, and the idea is to split it in some npm modules, and give each of them less responsibilities.
 This way the core will be easier to be maintained.
 
-### Yeoman generator
+#### Yeoman generator
 
 The installation process should be as easy as possible, this is why I'm thinking about creating a Yeoman module for installing Morpheus.
 
-## Help Morpheus
+### Help Morpheus
 
 I have a lot of [ideas](https://github.com/vesparny/morpheus/issues), but I've been alone in this adventure so far.
 
