--- a/todo
+++ b/todo
@@ -44,3 +44,4 @@ title
 canvas bg particles (search codepen) https://github.com/lukeed/pwa
 https://github.com/lukeed/dset
 404
+fare la checkbox per md come rebass v2 con icone
