--- a/posts/2015/morpheus-is-moving-forward.mdx
+++ b/posts/2015/morpheus-is-moving-forward.mdx
@@ -1,7 +1,7 @@
 ---
 
 The last week has been very exciting for me.
-I tweeted about **Morphues** and wrote [some words](https://alessandro.arnodo.net/2015/01/07/introducing-morpheus) about it and the buzz started pretty fast.
+I tweeted about **Morphues** and wrote [some words](https://arnodo.net/2015/01/07/introducing-morpheus) about it and the buzz started pretty fast.
 
 Even though the project is far from its first stable release, I received a lot of questions about the project and its state.
 
@@ -17,14 +17,14 @@ In these last few days I concentrated on solving some [issues](https://github.co
 
 ### RSS
 
-Morpheus has now RSS support for blog entries, everything works out of the box. Add this [website](https://alessandro.arnodo.net/rss/) to your feed reader for a try.
+Morpheus has now RSS support for blog entries, everything works out of the box. Add this [website](https://arnodo.net/rss/) to your feed reader for a try.
 
 ## Open Graph
 
 Morpheus supports now Meta tags for Open Graph.
 This means that any of your posts shared on Social Network will now have rich content associated.
 
-![Open graph](/images/2015/01/screenshot.png)
+![Open graph](/static/posts/2015/screenshot.png)
 
 
 ### Google Analytics
