--- a/posts/2015/introducing-morpheus.mdx
+++ b/posts/2015/introducing-morpheus.mdx
@@ -61,7 +61,7 @@ module.exports = {
     file: path.resolve(process.env.OPENSHIFT_DATA_DIR || '', 'log.log'),
   },
   debug: false,
-  siteUrl: 'https://alessandro.arnodo.net',
+  siteUrl: 'https://arnodo.net',
   useSSL: true,
   port: process.env.OPENSHIFT_NODEJS_PORT || 3000,
   ip: process.env.OPENSHIFT_NODEJS_IP || '127.0.0.1',
