--- a/todo
+++ b/todo
@@ -46,3 +46,7 @@ canvas bg particles (search codepen) https://github.com/lukeed/pwa
 https://github.com/lukeed/dset
 404
 fare la checkbox per md come rebass v2 con icone
+readaibility chrome css
+comments or something beneath the posts
+http://jxnblk.com/writing/posts/defining-component-apis-in-react/
+http://jxnblk.com/writing/posts/patterns-for-style-composition-in-react/
