--- a/todo
+++ b/todo
@@ -50,3 +50,7 @@ readaibility chrome css
 comments or something beneath the posts
 http://jxnblk.com/writing/posts/defining-component-apis-in-react/
 http://jxnblk.com/writing/posts/patterns-for-style-composition-in-react/
+https://zeit.co/design/brand
+
+https://jxnblk.com/rebass/getting-started/ not found
+touch icons titles
